docs: Update Gradle fix documentation with Java 17 compatibility details